--- a/same/pom.xml
+++ b/same/pom.xml
@@ -22,7 +22,19 @@
   </dependencies>
   <build>
     <finalName>same</finalName>
-    <plugins>
+    <pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<update>true</update>
+					<server>jenkins-bot</server>
+					<path>/</path>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -37,6 +49,8 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-        </plugins>
+		</plugins>
+	</pluginManagement>
+
   </build>
 </project>
